--- a/style.css
+++ b/style.css
@@ -145,16 +145,16 @@ body {
 .profile-wrapper {
   display: flex;
   position: absolute;
-  left: CALC(50% - 75px);
+  left: CALC(50% - 85px);
 }
 
 .image-circle {
   position: absolute;
-  width: 150px;
-  height: 150px;
+  width: 170px;
+  height: 170px;
   border-radius: 50%;
   /* background: #fff; */
-  top: -100px;
+  top: -110px;
   padding: 10px;
 }
 
@@ -164,9 +164,9 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 140px;
+  width: 160px;
   /* diameter of dashed ring  */
-  height: 140px;
+  height: 160px;
   transform: translate(-50%, -50%);
   fill: none;
   pointer-events: none;
@@ -175,8 +175,8 @@ body {
 
 /* make the dotted ring ride a little further out */
 .ring--dots {
-  width: 139px;
-  height: 139px;
+  width: 159px;
+  height: 159px;
   animation: spin 15s linear infinite;
 }
 
@@ -216,7 +216,7 @@ body {
   height: 100%;
   object-fit: cover;
   border-radius: 50%;
-  border: 5px solid #46a68a;
+  border: 6px solid #46a68a;
 }
 
 /* Card */
@@ -243,26 +243,25 @@ body {
 
 .title {
   color: var(--text);
-  font-weight: 700;
   font-size: 22px;
   letter-spacing: 0.2px;
   line-height: 1.15;
   margin: 0 0 8px 0;
   text-align: center;
-  font-weight: 400;
+  font-weight: 300;
 }
 
 .subtitle {
   margin: 0;
   color: #b8dcd2;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 19px;
   text-align: center;
+  padding: 5px;
   opacity: 0.95;
 }
 
 .rows {
-  border-top: 1px solid var(--divider);
   background: var(--card-2);
 }
 
